<resources>
    <string name="app_name">Basic Calculator By Bensu Sezgi</string>
    <string name="number_zero"> 0 </string>
    <string name="comma_sign"> , </string>
    <string name="equal_sign"> = </string>
    <string name="number_one"> 1 </string>
    <string name="number_two"> 2 </string>
    <string name="number_three"> 3 </string>
    <string name="addition_sign"> + </string>
    <string name="number_four"> 4 </string>
    <string name="number_five"> 5 </string>
    <string name="number_six"> 6 </string>
    <string name="minus_sign"> - </string>
    <string name="number_seven"> 7 </string>
    <string name="number_eight"> 8 </string>
    <string name="number_nine"> 9 </string>
    <string name="multiplication_sign"> x </string>
    <string name="clear_sign"> AC </string>
    <string name="sign_changing"> +/- </string>
    <string name="percent_value"> % </string>
    <string name="division_sign"> ÷ </string>

</resources>